--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <label for="comment">Message:</label>
                 <textarea class="form-control" rows="5" id="comment" name="message" required></textarea>
                   </div>
-                  <button type="button" class="btn btn-success"style="float:right; margin-right:10%;">Send Message!</button>
+                  <button type="submit" value="Submit" class="btn btn-success"style="float:right; margin-right:10%;">Send Message!</button>
                 </form>
               </div>
           </div>
